# FIDESlib

./: CMakeLists.txt  ProjectReport.tex
bench/bootstrap_batch_mgpu/: CMakeLists.txt  bootstrap_batch_mgpu.cu
comm/: CMakeLists.txt  nccl_allreduce.cu  p2p_bw.cu
examples/he_matmul/: CMakeLists.txt
examples/he_matmul/src/: main.cu
examples/lintrans_diag/: lintrans_diag.cu
include/CKKS/: Context.cuh
scripts/: comm_bench.slurm  setup_env.sh
src/: ConstantsGPU.cu
src/CKKS/: Context.cu  Limb.cu  LimbPartition.cu
